Reformat code following the hawkbit formatting rules (#3154)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>